# dune-pymor

./: .gitignore  .kateproject  CMakeLists.txt  LICENSE  Makefile.am  README  configure.ac  dune-pymor.pc.in  dune.module  stamp-vc
cmake/: CheckPythonModule.cmake  PymorUtils.cmake  cmake_config.h.in
doc/: CMakeLists.txt  Makefile.am
doc/doxygen/: CMakeLists.txt  Doxylocal  Makefile.am
dune/: CMakeLists.txt  Makefile.am  __init__.py
dune/pymor/: CMakeLists.txt  Makefile.am  __init__.py  all.hh  common.py  core.py  discretizations.py  exists.hh  functionals.py  functions.cc  functions.hh  operators.cc  operators.hh  operators.py  pymor.hh  python-bindings.hh
dune/pymor/bindings/: CMakeLists.txt  pymor.hh  stuff.hh  stuff.py
dune/pymor/common/: Makefile.am  __init__.py  crtp.hh  exceptions.hh  exceptions.py
dune/pymor/core/: __init__.py  bindings.py  wrapmodule.py  wrapper.py
dune/pymor/discretizations/: Makefile.am  default.hh  interfaces.cc  interfaces.hh
dune/pymor/functionals/: Makefile.am  affine.hh  default.cc  default.hh  interfaces.cc  interfaces.hh
dune/pymor/functions/: Makefile.am  checkerboard.cc  checkerboard.hh  complement_pair_function.hh  default.cc  default.hh  interfaces.cc  interfaces.hh  spe10model2.hh
dune/pymor/la/: Makefile.am  __init__.py  container.cc  container.hh  container.py
dune/pymor/la/container/: Makefile.am  affine.hh  dunedynamic.cc  dunedynamic.hh  dunedynamicvector.cc  dunedynamicvector.hh  eigen.cc  eigen.hh  eigenvector.cc  eigenvector.hh  interfaces.cc  interfaces.hh
dune/pymor/operators/: Makefile.am  affine.cc  affine.hh  base.cc  base.hh  common.cc  common.hh  commondense.cc  default.cc  default.hh  dunedynamic.cc  dunedynamic.hh  dunedynamicmatrix.cc  dunedynamicmatrix.hh  eigen.cc  eigen.hh  interfaces.cc  interfaces.hh  istl.cc  istl.hh
dune/pymor/parameters/: Makefile.am  __init__.py  base.cc  base.hh  base.py  functional.cc  functional.hh  functional.py
dune/pymor/test/: functionals.cc  functions.cc  la_container.cc  operators.cc  parameters_base.cc  parameters_functional.cc
examples/: CMakeLists.txt  stationarylinear.cc  stationarylinear.hh  stationarylinear_bindings_generator.py  stationarylinear_main.cc  stationarylinear_test.py
examples/la/: CMakeLists.txt  container.cc  container.hh  container.py  container_main.cc
examples/parameters/: CMakeLists.txt  base.cc  base.hh  base.py  base_main.cc
lib/: Makefile.am
m4/: Makefile.am  dune-pymor.m4
src/: Makefile.am  dune_pymor.cc
test/: functionals.cc  operators.cc  parameters_base.cc  parameters_functional.cc
tests/: CMakeLists.txt  functionals.cc  functions.cc  la_container.cc  operators.cc  parameters_base.cc  parameters_functional.cc
