# This file is part of the dune-pymor project:
#   https://github.com/pymor/dune-pymor
# Copyright Holders: Stephan Rave, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

SUBDIRS = doxygen
CURDIR = doc
BASEDIR = ..

# add list of html files to generate from wml
PAGES=

docdir=$(datadir)/doc/dune-pymor

include $(top_srcdir)/am/webstuff
include $(top_srcdir)/am/global-rules
