# This file is part of the dune-pymor project:
#   https://github.com/pyMor/dune-pymor
# Copyright Holders: Felix Albrecht, Stephan Rave
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

M4FILES = dune-pymor.m4

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(M4FILES)

EXTRA_DIST = $(M4FILES)

include $(top_srcdir)/am/global-rules
