# This file is part of the dune-pymor project:
#   https://github.com/pyMor/dune-pymor
# Copyright Holders: Felix Albrecht, Stephan Rave
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

discretizationsincludedir = $(includedir)/dune/pymor/discretizations
discretizationsinclude_HEADERS = interfaces.hh

include $(top_srcdir)/am/global-rules
