# This file is part of the dune-pymor project:
#   https://github.com/pymor/dune-pymor
# Copyright Holders: Stephan Rave, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

functionalsincludedir = $(includedir)/dune/pymor/functionals
functionalsinclude_HEADERS = default.hh interfaces.hh

include $(top_srcdir)/am/global-rules
