# This file is part of the dune-pymor project:
#   https://github.com/pymor/dune-pymor
# Copyright Holders: Stephan Rave, Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

functionsincludedir = $(includedir)/dune/pymor/functions
functionsinclude_HEADERS = checkerboard.hh default.hh interfaces.hh wrapper.hh

include $(top_srcdir)/am/global-rules
